adds contacts to the footer

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+        e-mail: NameLastname@gmail.com cel: +7 999 999 9999
       </div>
     </footer>
   </body>
