--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
   <body>
     <header class="page-header">
       <div class="container">
-      e-mail: NameLastname@gmail.com cel: +7 999 999 9999
+      <a class="header-email" href="e-mail: NameLastname@gmail.com">NameLastname@gmail.com</a> 
+      <a class="header-phone" href="cel: +7 999 999 9999">+7 999 999 9999</a>
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading"> Иван Иванов</h1>
+      <h1 class="heading"> Иванa Ивановa</h1>
       <p>Junior верстальщик</p>
       </div>
     </section>
 
     <section class="intro">
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
+      </figure>
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
@@ -34,9 +38,13 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      
+      <figure class="project-image">
+        <img src="files/project.jpg">
+      </figure>
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -45,7 +53,8 @@
 
     <footer class="page-footer">
       <div class="container">
-        e-mail: NameLastname@gmail.com cel: +7 999 999 9999
+        <a class="footer-email" href="e-mail: NameLastname@gmail.com">NameLastname@gmail.com</a> 
+      <a class="footer-phone" href="cel: +7 999 999 9999">+7 999 999 9999</a>
       </div>
     </footer>
   </body>
